# noci-rs

./: .gitignore  .ri  Cargo.toml  LICENSE  README.md  blocking.py  build.rs  diff  generate.py  rustfmt.toml
.github/workflows/: clippy.yml  coverage.yml  tests.yml
inputs/benchmarks/: QMC_BENCHMARK1.1.lua  QMC_BENCHMARK1.2.lua  QMC_BENCHMARK1.lua  QMC_BENCHMARK2.1.lua  QMC_BENCHMARK2.2.lua  QMC_BENCHMARK2.lua  QMC_BENCHMARK3.1.lua  QMC_BENCHMARK3.2.lua  SNOCI_BENCHMARK1.lua  SNOCI_BENCHMARK2.lua
inputs/examples/: F2_cc-pVDZ_holomorphic_PT2_scan.lua  LiH_cc-pVDZ_difference-doubly-shifted_2_8.lua
scripts/: blocking.py  generate.py  plotting.py  scaling.py
src/: basis.rs  deterministic.rs  diis.rs  input.rs  lib.rs  main.rs  maths.rs  mpiutils.rs  noci.rs  nonorthogonalwicks.rs  orbitals.rs  read.rs  scalar.rs  scf.rs  snoci.rs  state.rs  stochastic.rs  utils.rs  write.rs
src/basis/: atoms.rs  bias.rs  duplicate.rs  excitation.rs  generate.rs  metadynamics.rs  mod.rs  mom.rs  normalise.rs  types.rs
src/deterministic/: mod.rs  noccmc.rs  nociqmc.rs
src/driver/: config.rs  deterministic.rs  geometry.rs  mod.rs  post.rs  pyscf.rs  reference.rs  report.rs  run.rs  scf.rs  snoci.rs  stochastic.rs  types.rs
src/input/: det.rs  excit.rs  mod.rs  mol.rs  parse.rs  prop.rs  qmc.rs  scf.rs  snoci.rs  state.rs  wicks.rs  write.rs
src/maths/: einsum.rs  eri.rs  linalg.rs  mod.rs  wick.rs
src/nocc/: common.rs  driver.rs  loader.rs  mod.rs  overlap.rs  residual.rs  space.rs  terms.rs
src/noci/: cache.rs  fock.rs  hs.rs  m.rs  matrix.rs  mod.rs  naive.rs  overlap.rs  overlaps.rs  rdm.rs  types.rs  wicks.rs
src/nonorthogonalwicks/: build.rs  eval.rs  layout.rs  mod.rs  scratch.rs  stats.rs  storage.rs  types.rs  view.rs
src/scf/: bias.rs  cycle.rs  diis.rs  energy.rs  fock.rs  holomorphic.rs  kernels.rs  mod.rs  occupation.rs  print.rs  select.rs
src/snoci/: candidate.rs  gmres.rs  mod.rs  operators.rs  solve.rs  step.rs  types.rs
src/stochastic/: common.rs  excit.rs  init.rs  metric.rs  mod.rs  propagate.rs  qmc.rs  report.rs  restart.rs  state.rs  walkers.rs
src/timers/: deterministic.rs  mod.rs  (+5 more)
tests/: deterministic.rs  noci.rs  pt2.rs  qmc.rs  reference_noci.rs  snoci.rs
(+149 files in other folders)
