[package]
name = "noci-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rlua = "0.20.1"
rand = "0.8"
ndarray = {version = "0.15", features = ["rayon"]}
ndarray-linalg = {version = "0.16", features = ["openblas"]}
num-complex = "0.4"
rayon = "1"
hdf5 = "0.8"
serde_json = "1"

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

