[package]
name = "noci-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rlua = "0.20.1"
rand = {version = "0.8", features = ["small_rng"]}
mpi = {version = "0.7", features = ["derive"]}
ndarray-linalg = {version = "0.16", features = ["openblas-system"]}
ndarray = {version = "0.15", features = ["rayon", "serde"]}
serde = {version = "1", features = ["derive", "rc"]}
serde_json = "1"
num-complex = "0.4"
rayon = "1"
hdf5 = "0.8.1"
bincode = "1"

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

