[package]
name = "noci-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
rlua = {version = "0.20.1"}
rand = {version = "0.8", features = ["small_rng"], default-features = false}
mpi = {version = "0.7", features = ["derive"]}
ndarray-linalg = {version = "0.16", features = ["openblas-system"], default-features = false}
ndarray = {version = "0.15", features = ["rayon", "serde"], default-features = false}
serde = {version = "1", features = ["derive", "rc"]}
serde_json = {version = "1", features = ["std"], default-features = false}
rayon = {version = "1", default-features = false}
num-complex = {version = "0.4"}
hdf5 = {version = "0.8.1", default-features = false}
bincode = {version = "1"}

[profile.release]
opt-level = 3
debug = false
strip = false
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
